Removed a bunch of commented out code. Fixed the player alignment on Mobile.

--- a/src/Components/Common/Player/Player.scss
+++ b/src/Components/Common/Player/Player.scss
@@ -36,6 +36,9 @@
     height: 100%;
     align-items: center;
     margin-top: 30px;
+    @media screen and (max-width: 650px) {
+      margin-top: 16px;
+    }
     .top-icons {
       display: flex;
       align-items: center;
