--- a/src/Components/Common/ProfileHeader/ProfileHeader.scss
+++ b/src/Components/Common/ProfileHeader/ProfileHeader.scss
@@ -1,7 +1,6 @@
 @import "../../../assets/SCSS/Vars.scss";
 
 #profile-header {
-  // height: 344px;
   .container {
     margin-top: -140px;
     position: relative;
@@ -25,9 +24,6 @@
       height: 400px;
       width: 100vw;
     }
-    // @media screen and (max-width: 950px) {
-    //   height: 440px;
-    // }
     @media screen and (max-width: 650px) {
       height: 440px;
       width: 100vw;
@@ -61,9 +57,6 @@
      @media screen and (max-width: 1280px) {
           height: 400px;
         }
-        // @media screen and (max-width: 950px) {
-        //   height: 440px;
-        // }
         @media screen and (max-width: 650px) {
           height: 440px;
         }
@@ -86,10 +79,6 @@
     }
   }
   .profile-head-details {
-    // margin-top: -90px;
-    @media screen and (max-width: 650px) {
-      // margin-top: -80px;
-    }
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -107,8 +96,6 @@
         gap: 15px;
         justify-content: space-between;
       }
-      // position: absolute;
-      // top: 412px;
     }
     .profile-image {
       width: 180px;
@@ -154,7 +141,6 @@
     }
 
     .details {
-      // margin-left: 25px;
       font-family: $space;
       font-style: normal;
       font-size: 32px;
@@ -180,9 +166,6 @@
           font-size: 17px;
         }
       }
-      // @media screen and (max-width: 650px) {
-      //   display: none;
-      // }
       h3 {
         margin-bottom: 0px;
         font-size: 32px;
@@ -197,10 +180,6 @@
     }
   }
   .btn-wrap {
-    // position: absolute;
-    // top: 520px;
-    // right: 14%;
-    // display: flex;
     gap: 30px;
     cursor: pointer;
     align-self: flex-end;
@@ -217,9 +196,7 @@
       transform: translateY(-25.5px);
     }
     @media screen and (max-width: 650px) {
-      // flex-direction: column;
-      // width: 200px;
-      // margin-top: auto;
+      transform: translateY(-30px);
     }
     button {
       background: #ffffff;
@@ -232,38 +209,22 @@
       border-radius: 50px;
       border: 0px;
       font-family: $lato;
-      // margin-right: 20px;
       padding: 15px 30px;
       line-height: 19px;
       min-width: 140px;
       @media screen and (max-width: 650px) {
         width: 100%;
-        // padding: 10px;
-        // font-size: 14px;
-        // text-align: center;
-        // justify-content: center;
       }
       &:last-child {
         margin-right: 0px;
-        @media screen and (max-width: 650px) {
-          // margin-top: -15px;
-        }
-      }
-
-      &:first-child {
-        // margin-left: auto;
       }
       img {
-        // margin-left: 10px;
         margin-right: 12px;
       }
     }
   }
 
   .details {
-    // &.mobile {
-    //   display: none;
-    // }
     @media screen and (max-width: 650px) {
       &.mobile {
         margin-left: 20px;
@@ -424,17 +385,3 @@
     }
   }
 }
-
-// .mobileShow{
-//   display: none !important;
-//   @media screen and (max-width: 650px) {
-//     display: flex !important;
-//     margin-right: 10px;
-//   }
-// }
-// .mobileHide{
-//   display: flex !important;
-//   @media screen and (max-width: 650px) {
-//     display: none !important;
-//   }
-// }
