--- a/src/Containers/MyProfile/MyProfile.scss
+++ b/src/Containers/MyProfile/MyProfile.scss
@@ -16,6 +16,9 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      @media screen and (max-width: 650px) {
+        margin-left: 20px;
+      }
       margin-bottom: 30px;
       h2 {
         font-size: 20px;
